// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search form all render Render dummy About with no errors 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <About />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <p
            className="flow-text"
          >
            What is Lorem Ipsum?
          </p>
          <p>
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
          </p>
        </div>,
        <blockquote>
          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
        </blockquote>,
        <div>
          <p
            className="flow-text"
          >
            Where does it come from?
          </p>
          <p>
            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
          </p>
        </div>,
      ],
      "className": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="flow-text"
            >
              What is Lorem Ipsum?
            </p>,
            <p>
              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "What is Lorem Ipsum?",
              "className": "flow-text",
            },
            "ref": null,
            "rendered": "What is Lorem Ipsum?",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
            },
            "ref": null,
            "rendered": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).",
        },
        "ref": null,
        "rendered": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).",
        "type": "blockquote",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="flow-text"
            >
              Where does it come from?
            </p>,
            <p>
              Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Where does it come from?",
              "className": "flow-text",
            },
            "ref": null,
            "rendered": "Where does it come from?",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \\"de Finibus Bonorum et Malorum\\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \\"Lorem ipsum dolor sit amet..\\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \\"de Finibus Bonorum et Malorum\\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.",
            },
            "ref": null,
            "rendered": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \\"de Finibus Bonorum et Malorum\\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \\"Lorem ipsum dolor sit amet..\\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \\"de Finibus Bonorum et Malorum\\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <p
              className="flow-text"
            >
              What is Lorem Ipsum?
            </p>
            <p>
              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
            </p>
          </div>,
          <blockquote>
            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
          </blockquote>,
          <div>
            <p
              className="flow-text"
            >
              Where does it come from?
            </p>
            <p>
              Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
            </p>
          </div>,
        ],
        "className": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="flow-text"
              >
                What is Lorem Ipsum?
              </p>,
              <p>
                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
              </p>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "What is Lorem Ipsum?",
                "className": "flow-text",
              },
              "ref": null,
              "rendered": "What is Lorem Ipsum?",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
              },
              "ref": null,
              "rendered": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).",
          },
          "ref": null,
          "rendered": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).",
          "type": "blockquote",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="flow-text"
              >
                Where does it come from?
              </p>,
              <p>
                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
              </p>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Where does it come from?",
                "className": "flow-text",
              },
              "ref": null,
              "rendered": "Where does it come from?",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \\"de Finibus Bonorum et Malorum\\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \\"Lorem ipsum dolor sit amet..\\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \\"de Finibus Bonorum et Malorum\\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.",
              },
              "ref": null,
              "rendered": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \\"de Finibus Bonorum et Malorum\\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \\"Lorem ipsum dolor sit amet..\\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \\"de Finibus Bonorum et Malorum\\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Search form all render Render dummy Contacts with no errors and send message 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contacts />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row"
        >
          <div
            className="col s6"
          >
            <div
              className="card horizontal z-depth-4 margin-top-50"
            >
              <div
                className="card-stacked"
              >
                <div
                  className="card-content"
                >
                  <div>
                      
                    <i
                      className="material-icons Large"
                    >
                      assignment_ind
                    </i>
                    <p>
                      Vitali Zinkevich
                    </p>
                  </div>
                  <div>
                      
                    <i
                      className="material-icons Large"
                    >
                      email
                    </i>
                     
                    <p>
                      vitalizinkevich@gmail.com
                    </p>
                  </div>
                  <div>
                      
                    <i
                      className="material-icons Large"
                    >
                      contact_phone
                    </i>
                     
                    <p>
                      +375 29 338 00 91
                    </p>
                  </div>
                  <div>
                      
                    <i
                      className="material-icons Large"
                    >
                      link
                    </i>
                     
                    <p>
                      <a
                        href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                      >
                        I am at linkedIn
                      </a>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col s6 contactForm"
          >
            <div
              className="contactForm"
            >
              <p
                className="flow-text"
              >
                Спросить
              </p>
              <Input
                checked={false}
                icon="email"
                label="Почта"
                name="email"
                onChange={[Function]}
                type="text"
              />
              <Input
                checked={false}
                icon="message"
                label="Сообщение"
                name="message"
                onChange={[Function]}
                type="textarea"
              />
              <Button
                className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                id="sendMsg"
                node="button"
                onClick={[Function]}
              >
                Отправить
              </Button>
            </div>
          </div>
        </div>,
        <Modal
          actions={null}
          bottomSheet={false}
          fixedFooter={false}
          header="Спасибо"
          modalOptions={Object {}}
          open={false}
          optons={
            Object {
              "inDuration": 100,
            }
          }
        >
          Ваше сообщение получено
        </Modal>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col s6"
            >
              <div
                className="card horizontal z-depth-4 margin-top-50"
              >
                <div
                  className="card-stacked"
                >
                  <div
                    className="card-content"
                  >
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        assignment_ind
                      </i>
                      <p>
                        Vitali Zinkevich
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        email
                      </i>
                       
                      <p>
                        vitalizinkevich@gmail.com
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        contact_phone
                      </i>
                       
                      <p>
                        +375 29 338 00 91
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        link
                      </i>
                       
                      <p>
                        <a
                          href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                        >
                          I am at linkedIn
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>,
            <div
              className="col s6 contactForm"
            >
              <div
                className="contactForm"
              >
                <p
                  className="flow-text"
                >
                  Спросить
                </p>
                <Input
                  checked={false}
                  icon="email"
                  label="Почта"
                  name="email"
                  onChange={[Function]}
                  type="text"
                />
                <Input
                  checked={false}
                  icon="message"
                  label="Сообщение"
                  name="message"
                  onChange={[Function]}
                  type="textarea"
                />
                <Button
                  className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                  id="sendMsg"
                  node="button"
                  onClick={[Function]}
                >
                  Отправить
                </Button>
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card horizontal z-depth-4 margin-top-50"
              >
                <div
                  className="card-stacked"
                >
                  <div
                    className="card-content"
                  >
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        assignment_ind
                      </i>
                      <p>
                        Vitali Zinkevich
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        email
                      </i>
                       
                      <p>
                        vitalizinkevich@gmail.com
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        contact_phone
                      </i>
                       
                      <p>
                        +375 29 338 00 91
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        link
                      </i>
                       
                      <p>
                        <a
                          href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                        >
                          I am at linkedIn
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </div>,
              "className": "col s6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card-stacked"
                >
                  <div
                    className="card-content"
                  >
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        assignment_ind
                      </i>
                      <p>
                        Vitali Zinkevich
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        email
                      </i>
                       
                      <p>
                        vitalizinkevich@gmail.com
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        contact_phone
                      </i>
                       
                      <p>
                        +375 29 338 00 91
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        link
                      </i>
                       
                      <p>
                        <a
                          href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                        >
                          I am at linkedIn
                        </a>
                      </p>
                    </div>
                  </div>
                </div>,
                "className": "card horizontal z-depth-4 margin-top-50",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-content"
                  >
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        assignment_ind
                      </i>
                      <p>
                        Vitali Zinkevich
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        email
                      </i>
                       
                      <p>
                        vitalizinkevich@gmail.com
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        contact_phone
                      </i>
                       
                      <p>
                        +375 29 338 00 91
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        link
                      </i>
                       
                      <p>
                        <a
                          href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                        >
                          I am at linkedIn
                        </a>
                      </p>
                    </div>
                  </div>,
                  "className": "card-stacked",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          assignment_ind
                        </i>
                        <p>
                          Vitali Zinkevich
                        </p>
                      </div>,
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          email
                        </i>
                         
                        <p>
                          vitalizinkevich@gmail.com
                        </p>
                      </div>,
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          contact_phone
                        </i>
                         
                        <p>
                          +375 29 338 00 91
                        </p>
                      </div>,
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          link
                        </i>
                         
                        <p>
                          <a
                            href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                          >
                            I am at linkedIn
                          </a>
                        </p>
                      </div>,
                    ],
                    "className": "card-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "  ",
                          <i
                            className="material-icons Large"
                          >
                            assignment_ind
                          </i>,
                          <p>
                            Vitali Zinkevich
                          </p>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "  ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "assignment_ind",
                            "className": "material-icons Large",
                          },
                          "ref": null,
                          "rendered": "assignment_ind",
                          "type": "i",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Vitali Zinkevich",
                          },
                          "ref": null,
                          "rendered": "Vitali Zinkevich",
                          "type": "p",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "  ",
                          <i
                            className="material-icons Large"
                          >
                            email
                          </i>,
                          " ",
                          <p>
                            vitalizinkevich@gmail.com
                          </p>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "  ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "email",
                            "className": "material-icons Large",
                          },
                          "ref": null,
                          "rendered": "email",
                          "type": "i",
                        },
                        " ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "vitalizinkevich@gmail.com",
                          },
                          "ref": null,
                          "rendered": "vitalizinkevich@gmail.com",
                          "type": "p",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "  ",
                          <i
                            className="material-icons Large"
                          >
                            contact_phone
                          </i>,
                          " ",
                          <p>
                            +375 29 338 00 91
                          </p>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "  ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "contact_phone",
                            "className": "material-icons Large",
                          },
                          "ref": null,
                          "rendered": "contact_phone",
                          "type": "i",
                        },
                        " ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "+375 29 338 00 91",
                          },
                          "ref": null,
                          "rendered": "+375 29 338 00 91",
                          "type": "p",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "  ",
                          <i
                            className="material-icons Large"
                          >
                            link
                          </i>,
                          " ",
                          <p>
                            <a
                              href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                            >
                              I am at linkedIn
                            </a>
                          </p>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "  ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "link",
                            "className": "material-icons Large",
                          },
                          "ref": null,
                          "rendered": "link",
                          "type": "i",
                        },
                        " ",
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <a
                              href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                            >
                              I am at linkedIn
                            </a>,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "I am at linkedIn",
                              "href": "https://www.linkedin.com/feed/?trk=onboarding-landing",
                            },
                            "ref": null,
                            "rendered": "I am at linkedIn",
                            "type": "a",
                          },
                          "type": "p",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="contactForm"
              >
                <p
                  className="flow-text"
                >
                  Спросить
                </p>
                <Input
                  checked={false}
                  icon="email"
                  label="Почта"
                  name="email"
                  onChange={[Function]}
                  type="text"
                />
                <Input
                  checked={false}
                  icon="message"
                  label="Сообщение"
                  name="message"
                  onChange={[Function]}
                  type="textarea"
                />
                <Button
                  className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                  id="sendMsg"
                  node="button"
                  onClick={[Function]}
                >
                  Отправить
                </Button>
              </div>,
              "className": "col s6 contactForm",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="flow-text"
                  >
                    Спросить
                  </p>,
                  <Input
                    checked={false}
                    icon="email"
                    label="Почта"
                    name="email"
                    onChange={[Function]}
                    type="text"
                  />,
                  <Input
                    checked={false}
                    icon="message"
                    label="Сообщение"
                    name="message"
                    onChange={[Function]}
                    type="textarea"
                  />,
                  <Button
                    className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                    id="sendMsg"
                    node="button"
                    onClick={[Function]}
                  >
                    Отправить
                  </Button>,
                ],
                "className": "contactForm",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Спросить",
                    "className": "flow-text",
                  },
                  "ref": null,
                  "rendered": "Спросить",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "icon": "email",
                    "label": "Почта",
                    "name": "email",
                    "onChange": [Function],
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "icon": "message",
                    "label": "Сообщение",
                    "name": "message",
                    "onChange": [Function],
                    "type": "textarea",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Отправить",
                    "className": "waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong",
                    "id": "sendMsg",
                    "node": "button",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Отправить",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": null,
          "bottomSheet": false,
          "children": "Ваше сообщение получено",
          "fixedFooter": false,
          "header": "Спасибо",
          "modalOptions": Object {},
          "open": false,
          "optons": Object {
            "inDuration": 100,
          },
        },
        "ref": null,
        "rendered": "Ваше сообщение получено",
        "type": [Function],
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row"
          >
            <div
              className="col s6"
            >
              <div
                className="card horizontal z-depth-4 margin-top-50"
              >
                <div
                  className="card-stacked"
                >
                  <div
                    className="card-content"
                  >
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        assignment_ind
                      </i>
                      <p>
                        Vitali Zinkevich
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        email
                      </i>
                       
                      <p>
                        vitalizinkevich@gmail.com
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        contact_phone
                      </i>
                       
                      <p>
                        +375 29 338 00 91
                      </p>
                    </div>
                    <div>
                        
                      <i
                        className="material-icons Large"
                      >
                        link
                      </i>
                       
                      <p>
                        <a
                          href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                        >
                          I am at linkedIn
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col s6 contactForm"
            >
              <div
                className="contactForm"
              >
                <p
                  className="flow-text"
                >
                  Спросить
                </p>
                <Input
                  checked={false}
                  icon="email"
                  label="Почта"
                  name="email"
                  onChange={[Function]}
                  type="text"
                />
                <Input
                  checked={false}
                  icon="message"
                  label="Сообщение"
                  name="message"
                  onChange={[Function]}
                  type="textarea"
                />
                <Button
                  className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                  id="sendMsg"
                  node="button"
                  onClick={[Function]}
                >
                  Отправить
                </Button>
              </div>
            </div>
          </div>,
          <Modal
            actions={null}
            bottomSheet={false}
            fixedFooter={false}
            header="Спасибо"
            modalOptions={Object {}}
            open={false}
            optons={
              Object {
                "inDuration": 100,
              }
            }
          >
            Ваше сообщение получено
          </Modal>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col s6"
              >
                <div
                  className="card horizontal z-depth-4 margin-top-50"
                >
                  <div
                    className="card-stacked"
                  >
                    <div
                      className="card-content"
                    >
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          assignment_ind
                        </i>
                        <p>
                          Vitali Zinkevich
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          email
                        </i>
                         
                        <p>
                          vitalizinkevich@gmail.com
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          contact_phone
                        </i>
                         
                        <p>
                          +375 29 338 00 91
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          link
                        </i>
                         
                        <p>
                          <a
                            href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                          >
                            I am at linkedIn
                          </a>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
              <div
                className="col s6 contactForm"
              >
                <div
                  className="contactForm"
                >
                  <p
                    className="flow-text"
                  >
                    Спросить
                  </p>
                  <Input
                    checked={false}
                    icon="email"
                    label="Почта"
                    name="email"
                    onChange={[Function]}
                    type="text"
                  />
                  <Input
                    checked={false}
                    icon="message"
                    label="Сообщение"
                    name="message"
                    onChange={[Function]}
                    type="textarea"
                  />
                  <Button
                    className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                    id="sendMsg"
                    node="button"
                    onClick={[Function]}
                  >
                    Отправить
                  </Button>
                </div>
              </div>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card horizontal z-depth-4 margin-top-50"
                >
                  <div
                    className="card-stacked"
                  >
                    <div
                      className="card-content"
                    >
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          assignment_ind
                        </i>
                        <p>
                          Vitali Zinkevich
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          email
                        </i>
                         
                        <p>
                          vitalizinkevich@gmail.com
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          contact_phone
                        </i>
                         
                        <p>
                          +375 29 338 00 91
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          link
                        </i>
                         
                        <p>
                          <a
                            href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                          >
                            I am at linkedIn
                          </a>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>,
                "className": "col s6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card-stacked"
                  >
                    <div
                      className="card-content"
                    >
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          assignment_ind
                        </i>
                        <p>
                          Vitali Zinkevich
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          email
                        </i>
                         
                        <p>
                          vitalizinkevich@gmail.com
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          contact_phone
                        </i>
                         
                        <p>
                          +375 29 338 00 91
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          link
                        </i>
                         
                        <p>
                          <a
                            href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                          >
                            I am at linkedIn
                          </a>
                        </p>
                      </div>
                    </div>
                  </div>,
                  "className": "card horizontal z-depth-4 margin-top-50",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card-content"
                    >
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          assignment_ind
                        </i>
                        <p>
                          Vitali Zinkevich
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          email
                        </i>
                         
                        <p>
                          vitalizinkevich@gmail.com
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          contact_phone
                        </i>
                         
                        <p>
                          +375 29 338 00 91
                        </p>
                      </div>
                      <div>
                          
                        <i
                          className="material-icons Large"
                        >
                          link
                        </i>
                         
                        <p>
                          <a
                            href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                          >
                            I am at linkedIn
                          </a>
                        </p>
                      </div>
                    </div>,
                    "className": "card-stacked",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div>
                            
                          <i
                            className="material-icons Large"
                          >
                            assignment_ind
                          </i>
                          <p>
                            Vitali Zinkevich
                          </p>
                        </div>,
                        <div>
                            
                          <i
                            className="material-icons Large"
                          >
                            email
                          </i>
                           
                          <p>
                            vitalizinkevich@gmail.com
                          </p>
                        </div>,
                        <div>
                            
                          <i
                            className="material-icons Large"
                          >
                            contact_phone
                          </i>
                           
                          <p>
                            +375 29 338 00 91
                          </p>
                        </div>,
                        <div>
                            
                          <i
                            className="material-icons Large"
                          >
                            link
                          </i>
                           
                          <p>
                            <a
                              href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                            >
                              I am at linkedIn
                            </a>
                          </p>
                        </div>,
                      ],
                      "className": "card-content",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "  ",
                            <i
                              className="material-icons Large"
                            >
                              assignment_ind
                            </i>,
                            <p>
                              Vitali Zinkevich
                            </p>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "  ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "assignment_ind",
                              "className": "material-icons Large",
                            },
                            "ref": null,
                            "rendered": "assignment_ind",
                            "type": "i",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Vitali Zinkevich",
                            },
                            "ref": null,
                            "rendered": "Vitali Zinkevich",
                            "type": "p",
                          },
                        ],
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "  ",
                            <i
                              className="material-icons Large"
                            >
                              email
                            </i>,
                            " ",
                            <p>
                              vitalizinkevich@gmail.com
                            </p>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "  ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "email",
                              "className": "material-icons Large",
                            },
                            "ref": null,
                            "rendered": "email",
                            "type": "i",
                          },
                          " ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "vitalizinkevich@gmail.com",
                            },
                            "ref": null,
                            "rendered": "vitalizinkevich@gmail.com",
                            "type": "p",
                          },
                        ],
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "  ",
                            <i
                              className="material-icons Large"
                            >
                              contact_phone
                            </i>,
                            " ",
                            <p>
                              +375 29 338 00 91
                            </p>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "  ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "contact_phone",
                              "className": "material-icons Large",
                            },
                            "ref": null,
                            "rendered": "contact_phone",
                            "type": "i",
                          },
                          " ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "+375 29 338 00 91",
                            },
                            "ref": null,
                            "rendered": "+375 29 338 00 91",
                            "type": "p",
                          },
                        ],
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "  ",
                            <i
                              className="material-icons Large"
                            >
                              link
                            </i>,
                            " ",
                            <p>
                              <a
                                href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                              >
                                I am at linkedIn
                              </a>
                            </p>,
                          ],
                        },
                        "ref": null,
                        "rendered": Array [
                          "  ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "link",
                              "className": "material-icons Large",
                            },
                            "ref": null,
                            "rendered": "link",
                            "type": "i",
                          },
                          " ",
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": <a
                                href="https://www.linkedin.com/feed/?trk=onboarding-landing"
                              >
                                I am at linkedIn
                              </a>,
                            },
                            "ref": null,
                            "rendered": Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "I am at linkedIn",
                                "href": "https://www.linkedin.com/feed/?trk=onboarding-landing",
                              },
                              "ref": null,
                              "rendered": "I am at linkedIn",
                              "type": "a",
                            },
                            "type": "p",
                          },
                        ],
                        "type": "div",
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="contactForm"
                >
                  <p
                    className="flow-text"
                  >
                    Спросить
                  </p>
                  <Input
                    checked={false}
                    icon="email"
                    label="Почта"
                    name="email"
                    onChange={[Function]}
                    type="text"
                  />
                  <Input
                    checked={false}
                    icon="message"
                    label="Сообщение"
                    name="message"
                    onChange={[Function]}
                    type="textarea"
                  />
                  <Button
                    className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                    id="sendMsg"
                    node="button"
                    onClick={[Function]}
                  >
                    Отправить
                  </Button>
                </div>,
                "className": "col s6 contactForm",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <p
                      className="flow-text"
                    >
                      Спросить
                    </p>,
                    <Input
                      checked={false}
                      icon="email"
                      label="Почта"
                      name="email"
                      onChange={[Function]}
                      type="text"
                    />,
                    <Input
                      checked={false}
                      icon="message"
                      label="Сообщение"
                      name="message"
                      onChange={[Function]}
                      type="textarea"
                    />,
                    <Button
                      className="waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong"
                      id="sendMsg"
                      node="button"
                      onClick={[Function]}
                    >
                      Отправить
                    </Button>,
                  ],
                  "className": "contactForm",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Спросить",
                      "className": "flow-text",
                    },
                    "ref": null,
                    "rendered": "Спросить",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "icon": "email",
                      "label": "Почта",
                      "name": "email",
                      "onChange": [Function],
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "icon": "message",
                      "label": "Сообщение",
                      "name": "message",
                      "onChange": [Function],
                      "type": "textarea",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Отправить",
                      "className": "waves-effect waves-light btn orange darken-2 z-depth-4 margin-top-25 textstrong",
                      "id": "sendMsg",
                      "node": "button",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "Отправить",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": null,
            "bottomSheet": false,
            "children": "Ваше сообщение получено",
            "fixedFooter": false,
            "header": "Спасибо",
            "modalOptions": Object {},
            "open": false,
            "optons": Object {
              "inDuration": 100,
            },
          },
          "ref": null,
          "rendered": "Ваше сообщение получено",
          "type": [Function],
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Search form all render Render dummy NoPage with no errors 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NoPage />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Такой страницы нет
        </h1>,
        <br />,
        <div
          className="center"
        >
          <Link
            replace={false}
            to="/"
          >
            <h2>
              На главную страницу
            </h2>
          </Link>
        </div>,
      ],
      "className": "center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Такой страницы нет",
        },
        "ref": null,
        "rendered": "Такой страницы нет",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/"
          >
            <h2>
              На главную страницу
            </h2>
          </Link>,
          "className": "center",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h2>
              На главную страницу
            </h2>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "На главную страницу",
            },
            "ref": null,
            "rendered": "На главную страницу",
            "type": "h2",
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Такой страницы нет
          </h1>,
          <br />,
          <div
            className="center"
          >
            <Link
              replace={false}
              to="/"
            >
              <h2>
                На главную страницу
              </h2>
            </Link>
          </div>,
        ],
        "className": "center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Такой страницы нет",
          },
          "ref": null,
          "rendered": "Такой страницы нет",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              <h2>
                На главную страницу
              </h2>
            </Link>,
            "className": "center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <h2>
                На главную страницу
              </h2>,
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "На главную страницу",
              },
              "ref": null,
              "rendered": "На главную страницу",
              "type": "h2",
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
